vaultwarden/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy: { type: Recreate }

  template:
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden
          ports:
            - { name: http, containerPort: 80 }
          volumeMounts:
            - name: space
              mountPath: /space
          resources:
            requests: { cpu: 10m, memory: 64Mi }
            limits: { cpu: 1000m, memory: 256Mi }

      volumes:
        - name: space
          persistentVolumeClaim: { claimName: vaultwarden-data-pvc }
