vaultwarden/networking.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
spec:
  ingressClassName: nginx
  rules:
  - host: leak.mon.enorme.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: { name: vaultwarden, port: { name: http } }
  tls:
  # use default certificate
  - hosts:
    - '*.mon.enorme.uk'

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs: [{ name: traefik-gateway, namespace: traefik }]
  hostnames: [leak.mon.enorme.uk]
  rules:
    - backendRefs:
       - name: vaultwarden
         port: 80

--- # Policies
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
spec:
  # This applies to all pods in the namespace
  podSelector: {}
  policyTypes: [Ingress, Egress]
  ingress:
    # Allow nginx to serve http ports
    - from:
        - namespaceSelector: { matchLabels: { kubernetes.io/metadata.name: ingress-nginx } }
          podSelector: { matchLabels: { app.kubernetes.io/name: ingress-nginx } }
      ports: [{ port: http }]
    # Allow traefik to serve http ports
    - from:
        - namespaceSelector: { matchLabels: { kubernetes.io/metadata.name: traefik } }
          podSelector: { matchLabels: { app.kubernetes.io/name: traefik } }
      ports: [{ port: http }]
  # Allow all egress because of OIDC
  egress: [{}]
